 - fix Spring.ValidUnitID to accept nils again
 - fix wreckage jumping from large *horizontal* impulse
 - fix landed HoverAirMoveType aircraft behavior when given a command within their build range
 ! fix LuaMaterial uniform management for materials with standard and deferred shaders
   material tables are now expected to contain subtables defining the uniforms; instead of
     "material = {shader = ..., camposloc = 123, texunits = ..., ...}"
   say
     "material = {shader = ..., uniforms = {camposloc = 123, ...}, texunits = ..., ...}"

   for a material that has both types of shader, supply "standardshader",
   "deferredshader", "standarduniforms", and "deferreduniforms" as keys

   new keys for these uniform subtables can be
     "viewmatrixloc"    // synonym for "cameraloc"
     "projmatrixloc"    // camera projection
     "viprmatrixloc"    // camera view-projection
     "viewmatrixinvloc" // synonym for "camerainvloc"
     "projmatrixinvloc" // camera inverse projection
     "viprmatrixinvloc" // camera inverse view-projection
     "shadowmatrixloc"  // synonym for "shadowloc"
     "cameradirloc"     // camera forward direction
     "simframeloc"      // current simulation frame
     "visframeloc"      // current renderer frame

 - fix #5182 (unwanted sun-texture reflections)
 - fix #5175 (microscopic FarTexture impostors)
 - fix #5166 (wrecks buried underground on maps with negative hardness)
 - fix #5165 (rare crash on exit or reload)
 - fix #5161 (Spring.IsUnitAllied always returning true in unsynced gadgets)
 - fix #5160 (Spring.SetSunLighting not working if applied in *get:Initialize and crashing when AdvMapShading=0)
 - fix #5157 (skirmishAiCallback_Unit_get{Pos,Vel} broken with cheats enabled)
 - fix #5155 (MoveCtrl.SetRotation not matching Spring.GetUnitRotation)
 - fix #5149 (EVENT_ENEMY* AI events not being sent)
 - fix #5148 (assertion failure with custom shaders)
 - fix #5146 (missing wreckage healthbars)
 - fix #5141 (glitchy tree rendering)