@@ -51,9 +51,9 @@ Bugfixes:
  - fix landed HoverAirMoveType aircraft behavior when given a command within their build range
  ! fix LuaMaterial uniform management for materials with standard and deferred shaders
    material tables are now expected to contain subtables defining the uniforms; instead of
-     "material = {shader = ..., camposloc = 123, texunits = ..., ...}"
+     "material = {shader = ..., cameraposloc = 123, texunits = ..., ...}"
    say
-     "material = {shader = ..., uniforms = {camposloc = 123, ...}, texunits = ..., ...}"
+     "material = {shader = ..., uniforms = {cameraposloc = 123, ...}, texunits = ..., ...}"
 
    for a material that has both types of shader, supply "standardshader",
    "deferredshader", "standarduniforms", and "deferreduniforms" as keys
@@ -67,6 +67,8 @@ Bugfixes:
      "viprmatrixinvloc" // camera inverse view-projection
      "shadowmatrixloc"  // synonym for "shadowloc"
      "cameradirloc"     // camera forward direction
+     "sundirloc"        // synonym for "sunposloc"
+     "rndvecloc"        // random 3-vector with length in [0, 1)
      "simframeloc"      // current simulation frame
      "visframeloc"      // current renderer frame
 
